<resources>

    <string name="app_name">Bingo Price</string>
    <string name="manchester_fan">Hello Manchester United fan!</string>
    <string name="current_price">The current price of the item is:</string>
    <string name="price_error">You did not enter a price</string>
    <string name="select_item">Select Item:</string>
    <string name="get_price">GET PRICE</string>
    <string name="price">Price</string>
    <string name="alert">ALERT</string>
    <string name="select">Select</string>
    <string name="alert_me_if_drops">Alert me if the price drops under:</string>
    </resources>
