<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.example.android.bingoprice.MainActivity">
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/manchester_fan"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:padding="10dp"
            android:text="@string/select_item" />


        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="10dp"
            android:text="@string/get_price" />

        <TextView
            android:id="@+id/text"
            style="@style/HeaderTextStyle"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_below="@+id/myButton"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text=""
            style="@style/HeaderTextStyle"/>

        <ImageView
            android:id="@+id/myImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerInside" />

        <CheckBox android:id="@+id/checkboxAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="@string/alert_me_if_drops"
            />

        <EditText
            android:id="@+id/price_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="number"
            />

        <Button
            android:id="@+id/alert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="10dp"
            android:onClick="alert"
            android:text="@string/alert" />

    </LinearLayout>
</ScrollView>